# spatial-scribe

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  Dockerfile  LICENSE  README.md  REPRODUCIBILITY.md  docker-compose.yml  pixi.toml  pyproject.toml
.claude/skills/spatialscribe/: SKILL.md
.github/workflows/: leak-gate.yml
backend/: app.py  report.py  stt.py
data/: README.md
design-system/: README.md  build.py  buttons.html  fonts_stakent.css  metric-tiles.html  nav-rail.html  overview.html  reason-pills.html  section-header.html  signal-meter.html  tokens-colors.html  tokens-type.html
docs/: ANNOTATION_SCHEME.md  API.md  ARCHITECTURE.md  BRAND.md  CELLGUIDE.md  COMPETITIVE_LANDSCAPE.md  DATASETS.md  DEMO_SCRIPT.md  EXTENSIONS.md  FRONTEND_STACK.md  POPV_UNCERTAINTY.md  QUICKSTART.md  USER_GUIDE.md  spatial-as-code-dialogue.md
docs/research/: README.md  annotation-method-research-appendix.md  annotation-method-selection.md  annotation_qc_thresholds.yaml  cell-annotation-qc.md  cell-annotation-quality-metrics.md  cellxgene-reference-routing.md  confidence-calibration.md  research-evidence-appendix.md
docs/research/sources/: README.md  popV_annotation.md
scripts/: ask.py  build_demo_cache.py  check_consistency.py  embed_fonts.py  fetch_reference.py  install.sh  launch_app.sh  make_favicon.py  make_public_demo.py  run.py
scripts/split/: README.md  compare_rctd_tacco.py  make_split_dotplots.py  rctd_full.py  rctd_result_to_split.py  run_split.R  tacco_split_inputs.py  tacco_weights.py
src/spatialscribe/: __init__.py
src/spatialscribe/agent/: __init__.py  tools.py
src/spatialscribe/analysis/: __init__.py  annotate.py  backend.py  calibration.py  cancerfinder.py  capabilities.py  cellguide.py  cluster.py  cluster_confidence.py  cnv.py  config.py  consensus.py  contracts.py  demo.py  errors.py  eval_metrics.py  export.py  io.py  (+25 more)
subprocesses/annotation/: README.md  run_panhumanpy.py  run_rctd.py  run_scanvi.py  run_singler.py
subprocesses/cancerfinder/: run_cancerfinder.py
subprocesses/cnv/: run_infercnv.py
subprocesses/ovrlpy/: run_ovrlpy.py
subprocesses/reference_fetch/: run_fetch_cellxgene.py
tests/: conftest.py  test_abstention_grouping.py  test_annotation_strategy.py  test_annotation_vocabulary.py  test_audit_fixes.py  test_backend_endpoints.py  test_calibration.py  test_capabilities_conformance.py  test_cellguide.py  test_cluster_confidence.py  test_cluster_ordering.py  test_confidence_fix.py  test_config.py  test_config_thresholds.py  test_consensus.py  test_copilot_subcluster_exposed.py  test_count_floor_shallow.py  test_dataset_consistency.py  test_demo.py  test_ensure_validity.py  test_errors.py  test_eval_metrics.py  test_export_provenance.py  test_fetch_reference.py  test_gaps.py  test_io.py  test_io_cosmx.py  test_io_loader.py  test_keys_status.py  test_llm_parse_robust.py  test_llm_provider.py  test_load_section.py  test_low_signal_filter.py  test_marker_overview.py  test_merge_types.py  test_methods.py  test_mouse_brain.py  test_palette.py  test_pipeline.py  test_pipeline_annotate_idempotent.py  (+19 more)
webapp/: index.html  package-lock.json  package.json  vite.config.ts
webapp/src/: App.tsx  SpecimenCanvas.tsx  api.ts  capCache.ts  recentSections.ts  styles.css
(+15 files in other folders)
